@@ -11,7 +11,9 @@ post-6.2 release changes:
 
 2003-08-11  Kevin Layer  <layer@crikey>
 
-	* fi-emacs21.el: rfe5611: no composer menu on windows
+	* fi-emacs21.el: rfe5611:
+	- no composer menu on windows
+	- improve/modernize font lock support
 
 2003-08-08  Kevin Layer  <layer@crikey>
 
